--- a/index.html
+++ b/index.html
@@ -208,12 +208,34 @@
 
   <!-- Google Translate loader -->
   <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-
   <script type="module">
+    // Bring in Firebase core and products
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-    import { getAuth } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-    import { getFirestore } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+    import {
+      getAuth,
+      onAuthStateChanged,
+      signInWithEmailAndPassword,
+      signOut,
+      createUserWithEmailAndPassword,
+      signInAnonymously,
+      signInWithCustomToken
+    } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+    import {
+      getFirestore,
+      collection,
+      addDoc,
+      getDocs,
+      doc,
+      setDoc,
+      getDoc,
+      deleteDoc,
+      query,
+      where,
+      onSnapshot,
+      Timestamp
+    } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
   
+    // Basic Firebase settings for your project
     const firebaseConfig = {
       apiKey: "AIzaSyDRHNIkKWuGDpID76Kn8r-6oU2cco6ga_c",
       authDomain: "labour-hire-app.firebaseapp.com",
@@ -223,13 +245,50 @@
       appId: "1:348482727709:web:3fba6f9fc7f8b4efa6fbf4"
     };
   
+    // Start Firebase
     const app = initializeApp(firebaseConfig);
+  
+    // Make the auth and database tools
     const auth = getAuth(app);
     const db = getFirestore(app);
   
-    // Make available globally for main.js
+    // Save these so other scripts can see them if needed
     window.firebase = { app, auth, db };
+  
+    // Save all the Firebase functions in one simple object
+    window.__fbImports = {
+      // auth tools
+      getAuth,
+      onAuthStateChanged,
+      signInWithEmailAndPassword,
+      signOut,
+      createUserWithEmailAndPassword,
+      signInAnonymously,
+      signInWithCustomToken,
+      // database tools
+      getFirestore,
+      collection,
+      addDoc,
+      getDocs,
+      doc,
+      setDoc,
+      getDoc,
+      deleteDoc,
+      query,
+      where,
+      onSnapshot,
+      Timestamp
+    };
+  
+    // This is what your other JS files will use
+    window.__services = {
+      auth,
+      db,
+      FB: window.__fbImports
+    };
+  
+    // Now load your main JS file (this runs after everything above is ready)
+    import "./assets/js/main.js";
   </script>
-  <script type="module" src="assets/js/main.js"></script>
 </body>
 </html>
