--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
   
     // This is what your other JS files will use
     window.__services = {
+      app,
       auth,
       db,
       FB: window.__fbImports
