--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
     };
   
     // Now load your main JS file (this runs after everything above is ready)
-    import "./assets/js/main.js";
+    import("./assets/js/main.js");
   </script>
 </body>
 </html>
