--- a/index.html
+++ b/index.html
@@ -36,25 +36,52 @@
       </div>
     </div>
 
-    <!-- Login View -->
-    <div id="login-view" class="hidden">
-      <div class="max-w-md mx-auto bg-white rounded-lg shadow-md p-8 mt-10">
-        <h2 id="login-title" class="text-2xl font-bold text-center text-gray-700 mb-6">Login</h2>
-        <input type="hidden" id="login-role">
-        <div class="mb-4">
-          <label for="login-email" class="block text-gray-700 text-sm font-bold mb-2">Email</label>
-          <input type="email" id="login-email" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="user@example.com">
-        </div>
-        <div class="mb-6">
-          <label for="login-password" class="block text-gray-700 text-sm font-bold mb-2">Password</label>
-          <input type="password" id="login-password" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" placeholder="******************">
-        </div>
-        <div class="flex items-center justify-between">
-          <button id="login-submit-btn" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">Sign In</button>
-          <button id="back-to-kiosk-from-login-btn" class="bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">Back to Kiosk</button>
-        </div>
-      </div>
+  <!-- Login View -->
+<div id="login-view" class="hidden">
+  <div class="max-w-md mx-auto bg-white rounded-lg shadow-md p-8 mt-10">
+    <h2 id="login-title" class="text-2xl font-bold text-center text-gray-700 mb-6">Login</h2>
+    <input type="hidden" id="login-role">
+
+    <div class="mb-4">
+      <label for="login-email" class="block text-gray-700 text-sm font-bold mb-2">Email</label>
+      <input type="email" id="login-email"
+             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+             placeholder="user@example.com">
     </div>
+
+    <div class="mb-6">
+      <label for="login-password" class="block text-gray-700 text-sm font-bold mb-2">Password</label>
+      <input type="password" id="login-password"
+             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
+             placeholder="******************">
+    </div>
+
+    <!-- Buttons -->
+    <div class="flex items-center justify-between space-x-2">
+      <!-- Sign In -->
+      <button id="login-submit-btn"
+              class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+              type="button">
+        Sign In
+      </button>
+
+      <!-- Sign Up (New) -->
+      <button id="signup-submit-btn"
+              class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+              type="button">
+        Sign Up
+      </button>
+
+      <!-- Back -->
+      <button id="back-to-kiosk-from-login-btn"
+              class="bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+              type="button">
+        Back
+      </button>
+    </div>
+
+  </div>
+</div>
 
     <!-- Supervisor/Admin placeholder views -->
     <div id="admin-dashboard-view" class="hidden">
