--- a/index.html
+++ b/index.html
@@ -104,6 +104,75 @@
       <div id="timesheet-export-section" class="admin-section hidden"></div>
     </div>
 
+    <!-- Worker Dashboard View -->
+<div id="worker-dashboard-view" class="hidden">
+  <h2 class="text-3xl font-bold mb-6 text-gray-800">
+    Worker Dashboard
+  </h2>
+
+  <!-- Quick actions -->
+  <div class="mb-8 flex space-x-4">
+    <button
+      id="worker-time-clock-btn"
+      class="bg-green-500 hover:bg-green-600 text-white font-bold py-3 px-6 rounded-lg text-lg"
+    >
+      Go to Time Clock
+    </button>
+  </div>
+
+  <!-- Upcoming Shifts -->
+  <div class="bg-white p-6 rounded-lg shadow mb-8">
+    <h3 class="text-2xl font-semibold mb-4">Upcoming Shifts</h3>
+
+    <ul class="space-y-3">
+      <!-- Placeholder item -->
+      <li class="p-4 bg-gray-100 rounded-lg flex justify-between items-center">
+        <div>
+          <p class="font-semibold">Tuesday 12 March</p>
+          <p class="text-sm text-gray-600">7:00 AM – 3:00 PM · Site A</p>
+        </div>
+        <span class="text-blue-600 font-medium">Scheduled</span>
+      </li>
+
+      <li class="p-4 bg-gray-100 rounded-lg flex justify-between items-center">
+        <div>
+          <p class="font-semibold">Wednesday 13 March</p>
+          <p class="text-sm text-gray-600">6:30 AM – 2:30 PM · Site B</p>
+        </div>
+        <span class="text-blue-600 font-medium">Scheduled</span>
+      </li>
+    </ul>
+  </div>
+
+  <!-- Past Shifts -->
+  <div class="bg-white p-6 rounded-lg shadow">
+    <h3 class="text-2xl font-semibold mb-4">Past Shifts</h3>
+
+    <ul class="space-y-3">
+      <!-- Placeholder item -->
+      <li class="p-4 bg-gray-100 rounded-lg flex justify-between items-center">
+        <div>
+          <p class="font-semibold">Monday 11 March</p>
+          <p class="text-sm text-gray-600">7.5 hours · Site A</p>
+        </div>
+        <button
+          class="bg-blue-500 hover:bg-blue-600 text-white text-sm font-semibold py-2 px-4 rounded-lg"
+        >
+          Request Edit
+        </button>
+      </li>
+
+      <li class="p-4 bg-gray-100 rounded-lg flex justify-between items-center">
+        <div>
+          <p class="font-semibold">Sunday 10 March</p>
+          <p class="text-sm text-gray-600">8.0 hours · Site B</p>
+        </div>
+        <span class="text-gray-500 text-sm">Approved</span>
+      </li>
+    </ul>
+  </div>
+</div>
+
     <!-- Time Clock -->
     <div id="time-clock-screen" class="hidden kiosk-screen bg-gray-200">
       <!-- unchanged time clock markup -->
