--- a/index.html
+++ b/index.html
@@ -16,6 +16,36 @@
 <body class="bg-gray-100 text-gray-800">
   <div id="app" class="container mx-auto p-4">
 
+    <div id="signup-view" class="hidden max-w-md mx-auto bg-white p-8 rounded-lg shadow-md mt-10">
+  <h2 class="text-2xl font-bold mb-6 text-center">Create Worker Account</h2>
+  <div class="space-y-4">
+    <input type="text" id="signup-name" placeholder="Full Name" class="w-full p-3 border rounded">
+    <input type="email" id="signup-email" placeholder="Email Address" class="w-full p-3 border rounded">
+    <input type="password" id="signup-password" placeholder="Password" class="w-full p-3 border rounded">
+    <button id="finish-signup-btn" class="w-full bg-green-600 text-white font-bold py-3 rounded hover:bg-green-700">
+      Finish Sign Up
+    </button>
+    <button id="back-to-login-btn" class="w-full text-gray-500 text-sm">Back to Login</button>
+  </div>
+</div>
+
+<div id="worker-dashboard-view" class="hidden">
+  <nav class="bg-blue-600 text-white p-4 shadow-md flex justify-around">
+    <button class="worker-nav-btn font-bold" data-target="worker-clock">Clock In/Out</button>
+    <button class="worker-nav-btn font-bold" data-target="worker-schedule">Schedule</button>
+    <button class="worker-nav-btn font-bold" data-target="worker-timesheet">Timesheet</button>
+  </nav>
+  
+  <div class="p-6">
+    <div id="worker-clock" class="worker-section text-center">
+       <h2 class="text-xl mb-4">Time Clock</h2>
+       <button class="bg-green-500 p-6 rounded-full text-white font-bold">START SHIFT</button>
+    </div>
+    <div id="worker-schedule" class="worker-section hidden"><h2>Your Schedule</h2></div>
+    <div id="worker-timesheet" class="worker-section hidden"><h2>Recent Timesheets</h2></div>
+  </div>
+</div>
+
     <!-- Main Navigation (shown after login) -->
     <div id="main-nav" class="hidden bg-white rounded-lg shadow p-4 mb-6 flex justify-between items-center">
       <h1 id="nav-title" class="text-2xl font-bold text-gray-700">Labour Management System</h1>
