--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             Sign In
           </button>
 
-          <button id="signup-submit-btn"
+          <button id="go-to-signup-btn"
             class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded">
             Sign Up
           </button>
